# velo

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: app.rs  config.rs  file_ops.rs  git_status.rs  main.rs  preview.rs  theme.rs  ui.rs  undo.rs
