[package]
name = "velo"
version = "0.1.0"
edition = "2021"
authors = ["Nicola Spieser"]
description = "⚡ A blazing-fast terminal file manager written in Rust"
license = "MIT"
repository = "https://github.com/redbasecap-buiss/velo"
keywords = ["terminal", "file-manager", "tui", "cli"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
syntect = "5"
git2 = "0.19"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
trash = "5"
open = "5"
chrono = "0.4"
fuzzy-matcher = "0.3"
unicode-width = "0.2"
arboard = "3"

[dev-dependencies]
tempfile = "3"
